@@ -1,0 +1,4 @@
+config.status
+config.log
+config.h
+Makefile
